Minor bugfix to js only 1 timeblock is present, improved readability of placeholder text

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -70,3 +70,13 @@ textarea {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
+
+.present::placeholder {
+  color: white;
+  opacity: 1;
+}
+
+.future::placeholder {
+  color: black;
+  opacity: 1;
+}
